crates/oopsie/tests/snapshots/daisy_fancy_report__fancy_report_colored_stripped_unstable.snap
---
source: crates/oopsie/tests/daisy_fancy_report.rs
expression: output
---
Error[daisy_fancy_report::TestError]: Test error: colored test

━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ SPANTRACE ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━



━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ BACKTRACE ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
 1: backtrace[[PTR]]::backtrace::libunwind::trace
    at /Users/gaetan/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/backtrace-0.3.76/src/backtrace/libunwind.rs:[LOC]
 2: backtrace[[PTR]]::backtrace::trace_unsynchronized::<<backtrace[[PTR]]::capture::Backtrace>::create::{closure#0}>
    at /Users/gaetan/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/backtrace-0.3.76/src/backtrace/mod.rs:[LOC]
 3: backtrace[[PTR]]::backtrace::trace::<<backtrace[[PTR]]::capture::Backtrace>::create::{closure#0}>
    at /Users/gaetan/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/backtrace-0.3.76/src/backtrace/mod.rs:[LOC]
 4: <backtrace[[PTR]]::capture::Backtrace>::create
    at /Users/gaetan/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/backtrace-0.3.76/src/capture.rs:[LOC]
 5: <backtrace[[PTR]]::capture::Backtrace>::new
    at /Users/gaetan/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/backtrace-0.3.76/src/capture.rs:[LOC]
 6: <oopsie_core[[PTR]]::backtrace::BackTrace as oopsie_core[[PTR]]::traits::GenerateImplicitData>::generate
    at [CRATE_DIR]-core/src/backtrace.rs:[LOC]
 7: <alloc[[PTR]]::boxed::Box<oopsie_core[[PTR]]::backtrace::BackTrace> as oopsie_core[[PTR]]::traits::GenerateImplicitData>::generate
    at [CRATE_DIR]-core/src/traits.rs:[LOC]
 8: <daisy_fancy_report[[PTR]]::TestOopsie<&str>>::build
    at [CRATE_DIR]/tests/daisy_fancy_report.rs:[LOC]
 9: daisy_fancy_report[[PTR]]::test_fancy_report_colored
    at [CRATE_DIR]/tests/daisy_fancy_report.rs:[LOC]
10: daisy_fancy_report[[PTR]]::test_fancy_report_colored::{closure#0}
    at [CRATE_DIR]/tests/daisy_fancy_report.rs:[LOC]
11: <daisy_fancy_report[[PTR]]::test_fancy_report_colored::{closure#0} as core[[PTR]]::ops::function::FnOnce<()>>::call_once
    at [SYS_ROOT]/lib/rustlib/src/rust/library/core/src/ops/function.rs:[LOC]
12: <fn() -> core[[PTR]]::result::Result<(), alloc[[PTR]]::string::String> as core[[PTR]]::ops::function::FnOnce<()>>::call_once
    at /rustc/[HASH]/library/core/src/ops/function.rs:[LOC]
13: test[[PTR]]::__rust_begin_short_backtrace::<core[[PTR]]::result::Result<(), alloc[[PTR]]::string::String>, fn() -> core[[PTR]]::result::Result<(), alloc[[PTR]]::string::String>>
    at /rustc/[HASH]/library/test/src/lib.rs:[LOC]
14: test[[PTR]]::run_test_in_process::{closure#0}
    at /rustc/[HASH]/library/test/src/lib.rs:[LOC]
15: <core[[PTR]]::panic::unwind_safe::AssertUnwindSafe<test[[PTR]]::run_test_in_process::{closure#0}> as core[[PTR]]::ops::function::FnOnce<()>>::call_once
    at /rustc/[HASH]/library/core/src/panic/unwind_safe.rs:[LOC]
16: std[[PTR]]::panicking::catch_unwind::do_call::<core[[PTR]]::panic::unwind_safe::AssertUnwindSafe<test[[PTR]]::run_test_in_process::{closure#0}>, core[[PTR]]::result::Result<(), alloc[[PTR]]::string::String>>
    at /rustc/[HASH]/library/std/src/panicking.rs:[LOC]
17: std[[PTR]]::panicking::catch_unwind::<core[[PTR]]::result::Result<(), alloc[[PTR]]::string::String>, core[[PTR]]::panic::unwind_safe::AssertUnwindSafe<test[[PTR]]::run_test_in_process::{closure#0}>>
    at /rustc/[HASH]/library/std/src/panicking.rs:[LOC]
18: std[[PTR]]::panic::catch_unwind::<core[[PTR]]::panic::unwind_safe::AssertUnwindSafe<test[[PTR]]::run_test_in_process::{closure#0}>, core[[PTR]]::result::Result<(), alloc[[PTR]]::string::String>>
    at /rustc/[HASH]/library/std/src/panic.rs:[LOC]
19: test[[PTR]]::run_test_in_process
    at /rustc/[HASH]/library/test/src/lib.rs:[LOC]
20: test[[PTR]]::run_test::{closure#0}
    at /rustc/[HASH]/library/test/src/lib.rs:[LOC]
21: test[[PTR]]::run_test::{closure#1}
    at /rustc/[HASH]/library/test/src/lib.rs:[LOC]
22: std[[PTR]]::sys::backtrace::__rust_begin_short_backtrace::<test[[PTR]]::run_test::{closure#1}, ()>
    at /rustc/[HASH]/library/std/src/sys/backtrace.rs:[LOC]
23: std[[PTR]]::thread::lifecycle::spawn_unchecked::<test[[PTR]]::run_test::{closure#1}, ()>::{closure#1}::{closure#0}
    at /rustc/[HASH]/library/std/src/thread/lifecycle.rs:[LOC]
24: <core[[PTR]]::panic::unwind_safe::AssertUnwindSafe<std[[PTR]]::thread::lifecycle::spawn_unchecked<test[[PTR]]::run_test::{closure#1}, ()>::{closure#1}::{closure#0}> as core[[PTR]]::ops::function::FnOnce<()>>::call_once
    at /rustc/[HASH]/library/core/src/panic/unwind_safe.rs:[LOC]
25: std[[PTR]]::panicking::catch_unwind::do_call::<core[[PTR]]::panic::unwind_safe::AssertUnwindSafe<std[[PTR]]::thread::lifecycle::spawn_unchecked<test[[PTR]]::run_test::{closure#1}, ()>::{closure#1}::{closure#0}>, ()>
    at /rustc/[HASH]/library/std/src/panicking.rs:[LOC]
26: std[[PTR]]::panicking::catch_unwind::<(), core[[PTR]]::panic::unwind_safe::AssertUnwindSafe<std[[PTR]]::thread::lifecycle::spawn_unchecked<test[[PTR]]::run_test::{closure#1}, ()>::{closure#1}::{closure#0}>>
    at /rustc/[HASH]/library/std/src/panicking.rs:[LOC]
27: std[[PTR]]::panic::catch_unwind::<core[[PTR]]::panic::unwind_safe::AssertUnwindSafe<std[[PTR]]::thread::lifecycle::spawn_unchecked<test[[PTR]]::run_test::{closure#1}, ()>::{closure#1}::{closure#0}>, ()>
    at /rustc/[HASH]/library/std/src/panic.rs:[LOC]
28: std[[PTR]]::thread::lifecycle::spawn_unchecked::<test[[PTR]]::run_test::{closure#1}, ()>::{closure#1}
    at /rustc/[HASH]/library/std/src/thread/lifecycle.rs:[LOC]
29: <std[[PTR]]::thread::lifecycle::spawn_unchecked<test[[PTR]]::run_test::{closure#1}, ()>::{closure#1} as core[[PTR]]::ops::function::FnOnce<()>>::call_once::{shim:vtable#0}
    at /rustc/[HASH]/library/core/src/ops/function.rs:[LOC]
30: <alloc[[PTR]]::boxed::Box<dyn core[[PTR]]::ops::function::FnOnce<(), Output = ()> + core[[PTR]]::marker::Send> as core[[PTR]]::ops::function::FnOnce<()>>::call_once
    at /rustc/[HASH]/library/alloc/src/boxed.rs:[LOC]
31: <std[[PTR]]::sys::thread::unix::Thread>::new::thread_start
    at /rustc/[HASH]/library/std/src/sys/thread/unix.rs:[LOC]
32: __pthread_cond_wait
    at <unknown source file>
