crates/oopsie/tests/snapshots/daisy_fancy_report__fancy_report_with_help_stable.snap
---
source: crates/oopsie/tests/daisy_fancy_report.rs
expression: report.to_string()
---
Error: Something went wrong: connection refused
