crates/oopsie/tests/snapshots/daisy_fancy_report__fancy_report_with_spantrace_debug_stable.snap
---
source: crates/oopsie/tests/daisy_fancy_report.rs
expression: "format!(\"{error:#}\")"
---
Inner error happened
